golden/generated/exadeploy/full_gcp/module-repository-deployment.yaml
---
# Source: exadeploy/templates/module-repository-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-repository-example
  namespace: default
  labels:
    app: module-repository-example
    helm.sh/chart: exadeploy-1.1.1
    app.kubernetes.io/name: exadeploy
    app.kubernetes.io/instance: exadeploy
    app.kubernetes.io/version: "0.10.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: module-repository-example
  template:
    metadata:
      labels:
        app: module-repository-example
      annotations:
        checksum/config: 07a8480653b30e17941ebccfc1f4e794eee20a09d86cedb7922e2191694fd5db
        prometheus.io/scrape: "true"
        prometheus.io/port: "21120"
        my-annotation: my-value
    spec:
      serviceAccountName: "my-module-repository-serviceaccount"
      nodeSelector:
        role: module-repository
      tolerations:
      - effect: NoSchedule
        key: dedicated
        operator: Equal
        value: module-repository
      containers:
      - name: module-repository
        image: gcr.io/foo/moduleRepository:bar_1234
        args : [
          "-config=/etc/config/exafunction_config.pbtxt",
        ]
        ports:
        - containerPort: 51
          protocol: TCP
        - name: metrics
          containerPort: 21120
          protocol: TCP
        resources:
          requests:
            memory: "3.5Gi"
            cpu: "1"
          limits:
            memory: "3.5Gi"
        env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: "/etc/credentials/gcp-credentials.json"
        volumeMounts:
        - name: config
          mountPath: "/etc/config"
          readOnly: true
        - name: system-secrets
          mountPath: /etc/system_secrets
          readOnly: true
        - name: ssl-cert
          mountPath: /etc/ssl-cert
          readOnly: true
        - name: gcp-credentials
          mountPath: "/etc/credentials/"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: exafunction-config-example
      - name: system-secrets
        secret:
          secretName: "postgres-secret"
          items:
          - key: "postgres_password_custom"
            path: postgres_password
      - name: ssl-cert
        configMap:
          name: postgres-ssl-cmap
      - name: gcp-credentials
        secret:
          secretName: "gcp-secret"
          items:
          - key: "gcp_credentials_json_custom"
            path: gcp-credentials.json
